# GIM

./: .gitignore  AUDIT_GIM14.md  AUDIT_GIM15.md  CALIBRATION_LAYER.md  CALIBRATION_REFERENCE.md  COMMAND_REFERENCE.md  GIM13.md  GIM13_simulation_flow.md  GIM_11_1.py  GIM_12_quarterly_readiness.md  GIM_13_policy_gaming_TZ.md  LICENSE  MODEL_DOCUMENTATION.md  NOTICE  README.md  RELEASE_GIM15_0.md  RELEASE_GIM15_1.md  RELEASE_GIM15_5.md  V10_3_prod_documentation.md  agent_states.csv  iran_usa_2023.html  methodic.md  pyproject.toml  visual.py
GIM_12/: GIM_11_1_documentation.md  GIM_12.py  GIM_12_documentation.md  README.md  agent_states.csv  credit_map_leaflet.py  credit_rating_methodology.md  gamma_app_prompt_ru.md  methodic.md
GIM_13/: README.md  __init__.py  __main__.py  briefing.py  calibration.py  calibration_validator.py  case_builder.py  compiled_policy.py  console_app.py  crisis_metrics.py  dashboard.py  decarb_sensitivity.py  decision_language.py  explanations.py  game_runner.py  geo_calibration.py  historical_backtest.py  interpretive_summary.py  model_terms.py  runtime.py  scenario_compiler.py  scenario_library.py  sim_bridge.py  types.py
data/: agent_states_operational.artifacts.json  agent_states_operational_2026.csv  agent_states_operational_2026.projection.json  agent_states_operational_2026_calibrated.csv  parameters_gim16.csv  parameters_gim16.lock.json  parameters_v15.csv  parameters_v15.lock.json
docs/: CALIBRATION_LAYER.md  CALIBRATION_REFERENCE.md  CORE_REFACTOR_MIGRATION.md  CORE_TRANSITION_CONTRACT.md  CRISIS_VALIDATION_PROTOCOL.md  README.md  (+22 more)
(+225 files in other folders)
