[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gim15"
version = "15.1.0"
description = "Unified local GIM15 simulator package"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["gim*"]
