[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gim16"
version = "16.0.0"
description = "Unified local GIM16 simulator package"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["gim*"]
